      installed from a newly enabled source, return the right state
      in this case
  * softwarecenter/view/appdetailsview_gtk.py:
    - remove explicit "progress.set_fraction()" in configure() because
      its not needed (gtk.ProgressBar will DTRT) and also we may get
      "xapian reopen" signals in the middle of a transaction, in this
      case we don't want to reset the progress. 

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 23 Sep 2010 16:38:35 -0400

software-center (3.0.1) maverick; urgency=low

  [ Michael Vogt ]
  * softwarecenter/db/update.py:
    - index the file even if "catalogedtime" is not yet written
      to /var/lib/apt-xapian-index/values (LP: #646018)
  * softwarecenter/view/purchasedialog.py:
    - set default window size to 640x400 (LP: #635215)
  
  [ Gary Lasker ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - fix crash if iconname has no value (LP: #639934) 
  * softwarecenter/view/viewswitcher.py:
    - fix intermittent crash when using arrow keys to
      expand/collapse nodes in the left nav pane (LP: #644176) 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Sep 2010 22:35:42 +0200

software-center (3.0) maverick; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/restfulclient.py:
    - setup cachedir to avoid unneeded wadl downloading (LP: #645837)
  * softwarecenter/utils.py:
    - fix crash if desktop_file_path does not contain "applications"
      (LP: #641071)
  * softwarecenter/backend/aptd.py:
    - add keyfile for whitelisted channel (LP: #645120)
  * softwarecenter/view/appdetailsview.py:
    - fix crash when reinstalling previous purchase 
      (LP: #645843)
  * softwarecenter/backend/restfulclient.py, softwarecenter/db/update.py,
    - use gio instead of restfulclient to get the available purchase
      items and properly use the etag values provided to avoid uneeded
      bandwidth usage and load on the server (LP: #645837)
  * utils/update-software-center-agent: